[ci skip] Updated release notes regarding python's `write_to_file()` changes

--- a/documentation/release_5.1.htm
+++ b/documentation/release_5.1.htm
@@ -48,6 +48,8 @@ none
   </li>    
   <li> Improvements to penalty functions including Hessian methods, see <a href="https://github.com/UCL/STIR/pull/901/">PR #901</a>.
   </li>
+  <li>Added <code>write_to_file(fname)</code> method to python <code>VoxelsOnCartesianGrid</code> objects and updated <code>recon_demo.py</code> as a demonstration.
+  </li>
 </ul>
 
 
