--- a/documentation/release_5.1.htm
+++ b/documentation/release_5.1.htm
@@ -55,6 +55,11 @@ none
 
 
 <h3>Build system</h3>
+    <li>
+      ROOT versions until v6.24 supported C++11, subsequent versions require at least C++14.
+      If ROOT v6.24 or later is detected, STIR will now use a minimum of C++14,
+      see <a href="https://github.com/UCL/STIR/pull/1068/">PR #1068</a>.
+    </li>
 
 
 <h3>Known problems</h3>
