Updated release notes for 5.1.

--- a/documentation/release_5.1.htm
+++ b/documentation/release_5.1.htm
@@ -39,7 +39,9 @@ improvements to the documentation.
 <h2> Summary for end users (also to be read by developers)</h2>
 
 <h3>Bug fixes</h3>
-none
+<ul>
+  <li>Fix of find_LOR_intersections_with_cylinder function, see <a href="https://github.com/UCL/STIR/pull/1072/">PR #1072</a>.
+</ul>
 
 <h3>New functionality</h3>
 <li>Improvements to listmode reconstruction by Nikos Efthimiou, see <a href="https://github.com/UCL/STIR/pull/1030/">PR #1030</a>. 
