minor rephrasing of release notes [ci skip]

--- a/documentation/release_5.1.htm
+++ b/documentation/release_5.1.htm
@@ -40,7 +40,7 @@ improvements to the documentation.
 
 <h3>Bug fixes</h3>
 <ul>
-  <li>Fix of find_LOR_intersections_with_cylinder function, see <a href="https://github.com/UCL/STIR/pull/1072/">PR #1072</a>.
+  <li>Fix of <code>find_LOR_intersections_with_cylinder</code> functions in the LOR hierarchy. This fixes the use of the <tt>parallelproj<tt> projector for non-cylindrical geometries. See <a href="https://github.com/UCL/STIR/pull/1072/">PR #1072</a>.</li>
 </ul>
 
 <h3>New functionality</h3>
