Fix OpenMP problem in ProjDataInfoCylindrical
an internal array was not initialised in a thread-safe manner.
ProjDataInfo*::get_all_det_pos_pairs_for_bin was therefore not thread-safe.

Fixes #1083

--- a/documentation/release_5.1.htm
+++ b/documentation/release_5.1.htm
@@ -71,8 +71,8 @@ See <a href=https://github.com/UCL/STIR/labels/bug>our issue tracker</a>.
 
 <h3>Minor bug fixes</h3>
 <ul>
-<li>
-</li>
+  <li>made <code>ProjDataInfo*::get_all_det_pos_pairs_for_bin</code> thread-safe.
+   See <a href="https://github.com/UCL/STIR/pull/1084/">PR #1084</a>.</li></li>
 </ul>
 
 <h3>Documentation changes</h3>
