Issue/1101 adapt safir format for positrigo (#1106)
Add support to read NeuroLF listmode format, based on SAFIR. The headers are the same but the bit-encoding is slightly different. The SAFIR classes were templated to avoid duplication.

Fixes #1101.


Co-authored-by: Markus Jehl <markus.jehl@positrigo.com>

--- a/documentation/release_5.1.htm
+++ b/documentation/release_5.1.htm
@@ -85,7 +85,10 @@ improvements to the documentation.
   </li>
   <li>Adapting randoms handling and ML normalisation estimation via template to handle BlocksOnCylindrical
     data as well, , see <a href="https://github.com/UCL/STIR/pull/1085/">PR #1085</a>.
-    </li>
+  </li>
+  <li>Backwards incompatible change to <code>SAFIRCListmodeInputFileFormat</code> to support a small variation of the SAFIR format for 
+    the NeuroLF brain PET scanner, see <a href="https://github.com/UCL/STIR/pull/1106/">PR #1106</a>.
+  </li>
 </ul>
 
 <h3>New examples</h3>
