--- a/documentation/release_5.1.htm
+++ b/documentation/release_5.1.htm
@@ -118,8 +118,9 @@ improvements to the documentation.
 <h3>Changed functionality</h3>
 
 
-<h3>Build system</h3>
+<h3>Build system and dependencies</h3>
 <ul>
+    <li>STIR now requires parallelproj 1.2</li>
     <li>
       ROOT versions until v6.24 supported C++11, subsequent versions require at least C++14.
       If ROOT v6.24 or later is detected, STIR will now use a minimum of C++14,
