--- a/documentation/release_5.1.htm
+++ b/documentation/release_5.1.htm
@@ -12,10 +12,6 @@
 <h2>Overall summary</h2>
 <p>
 <ul>
-<<<<<<< HEAD
-  <li>Improvements to listmode reconstruction to enable cahcing and multi-threading by Nikos Efthimiou and Kris Thielemans, see
-    <a href="https://github.com/UCL/STIR/pull/1030/">PR #1030</a> and <a href="https://github.com/UCL/STIR/pull/1094/">PR #1094</a>.
-=======
 <li>This release includes the first open-source code available for reconstructing pinhole-SPECT datasets (see <a href="https://github.com/UCL/STIR/pull/1100/">PR #1100</a>). It contains code by Carl&eacute;s Falc&oacute;n (Neuroimaging Group, Barcelona&#946;eta Brain Research Center) to create the pinhole-SPECT system matrix. Integration into STIR was completed by Matthew Strugari (Dalhousie University) and Kris Thielemans (UCL). This work is reported in
     <ul>
     <li>Matthew Strugari, Carles Falcon, Kjell Erlandsson, Brian Hutton, G. Andrew Reid, Ian Pottie, Sultan Darvesh, Steven Beyea, Kimberly Brewer, Kris Thielemans, <br />
@@ -84,6 +80,11 @@ improvements to the documentation.
   </li>
   <li>Added the option to set the radius on <code>TruncateToCylindricalFOVImageProcessor</code>.
   </li>
+  <li>Extra functions <code>get_STIR_doc_dir()</code> and <code>get_STIR_examples_dir()</code>,
+    added these on <code>get_STIR_config_dir()</code> to SWIG, change <code>stir_config</code>
+    utility to have corresponding options and only output the requested information (easier for parsing),
+    see <a href="https://github.com/UCL/STIR/pull/1118/">PR #1118</a>.
+  </li>
   <li><code>LmToProjData</code> is now filtering out coincidences in the same detector number of different rings. These were previously
       all added to the central bin of the first view, if not removed from the listmode file prior to reading.
   </li>
@@ -97,7 +98,7 @@ improvements to the documentation.
     and increasing generalisibility, see <a href="https://github.com/UCL/STIR/pull/1075/">PR #1075</a>.
   </li>
   <li>Adapting randoms handling and ML normalisation estimation via template to handle BlocksOnCylindrical
-    data as well, , see <a href="https://github.com/UCL/STIR/pull/1085/">PR #1085</a>.
+    data as well, see <a href="https://github.com/UCL/STIR/pull/1085/">PR #1085</a>.
   </li>
   <li>Backwards incompatible change to <code>SAFIRCListmodeInputFileFormat</code> to support a small variation of the SAFIR format for 
     the NeuroLF brain PET scanner, see <a href="https://github.com/UCL/STIR/pull/1106/">PR #1106</a>.
