rename (private) random bitfields to delayed
Fixes #1064

--- a/documentation/release_5.1.htm
+++ b/documentation/release_5.1.htm
@@ -117,7 +117,11 @@ improvements to the documentation.
 </ul>
 
 <h3>Changed functionality</h3>
-
+<ul>
+  <li>(private) bitfields <code>random</code> or <code>isRandom</code> have been renamed to <code>delayed</code>
+    to avoid confusion. Affected listmode file formats are SAFIR, ECAT962 and ECAT966.
+  </li>
+</ul>
 
 <h3>Build system</h3>
 <ul>
