--- a/documentation/history.htm
+++ b/documentation/history.htm
@@ -11,6 +11,7 @@
 The following links give you a summary what has changed. However,
 the ChangeLog is the definite (but tedious) information.
 <ul >
+<li><a href="release_5.1.htm">version 5.1.0 (dated 5 Jan 2023)</a></li>
 <li><a href="release_5.0.htm">version 5.0.2 (dated 26 May 2022)</a></li>
 <li><a href="release_5.0.htm">version 5.0.1 (dated 11 May 2022)</a></li>
 <li><a href="release_5.0.htm">version 5.0.0 (dated 22 March 2022)</a></li>
@@ -44,7 +45,7 @@ the ChangeLog is the definite (but tedious) information.
 
 <!-- Created: Wed Jul 19 16:03:02 BST 2000 -->
 <!-- hhmts start -->
-Last modified: March 22 2022
+Last modified: January 02 2023
 <!-- hhmts end -->
   </body>
 </html>
