--- a/documentation/release_5.1.htm
+++ b/documentation/release_5.1.htm
@@ -120,7 +120,7 @@ improvements to the documentation.
 
 <h3>Build system and dependencies</h3>
 <ul>
-    <li>STIR now requires parallelproj 1.2</li>
+    <li>STIR now requires parallelproj at least 1.0, although 1.2.10 or more recent is recommended.</li>
     <li>
       ROOT versions until v6.24 supported C++11, subsequent versions require at least C++14.
       If ROOT v6.24 or later is detected, STIR will now use a minimum of C++14,
