--- a/documentation/release_5.1.htm
+++ b/documentation/release_5.1.htm
@@ -123,8 +123,9 @@ improvements to the documentation.
   </li>
 </ul>
 
-<h3>Build system</h3>
+<h3>Build system and dependencies</h3>
 <ul>
+    <li>STIR now requires parallelproj at least 1.0, although 1.2.10 or more recent is recommended.</li>
     <li>
       ROOT versions until v6.24 supported C++11, subsequent versions require at least C++14.
       If ROOT v6.24 or later is detected, STIR will now use a minimum of C++14,
