SPECT: show explanation when the attenuation image has different characteristics

--- a/documentation/release_5.1.htm
+++ b/documentation/release_5.1.htm
@@ -122,6 +122,10 @@
   <li>(private) bitfields <code>random</code> or <code>isRandom</code> have been renamed to <code>delayed</code>
     to avoid confusion. Affected listmode file formats are SAFIR, ECAT962 and ECAT966.
   </li>
+  <li><code>DiscretisedDensityDensity::has_same_characteristics</code> now adds actual origins and grid spacing to the explanation if they are different.
+  </li>
+  <li><code>ProjMatrixByBinSPECTUB</code> prints an explanation when the attenuation image has different characteristics.
+  </li>
 </ul>
 
 <h3>Build system and dependencies</h3>
