--- a/documentation/credits.htm
+++ b/documentation/credits.htm
@@ -74,7 +74,7 @@ Thielemans, Kris</p>
    supervisor Lietsch, Stefan and Thielemans, Kris 
 
 8. Algorithms and Software Consulting Ltd, UK
-   (2011-2013)
+   (2011-2023)
    General maintenance, swig updates for Python support
    Thielemans, Kris
 
@@ -126,17 +126,25 @@ Thielemans, Kris</p>
     radionuclide database and calibration functionality
     Deidda, Daniel
 
-18. University College London, UK
-    (2013-2022)
-    scatter updates, dynamic data updates, OPENMP, PLS prior, reconstruction hierarchy, Siemens ECAT8 support etc
+18. Dalhousie University, Halifax, Canada
+    pinhole SPECT integration
+    Matthew Strugari
+
+19. University College London, UK
+    (2013-2023)
+    scatter updates, dynamic data updates, OPENMP, PLS, RDP etc priors, reconstruction hierarchy, Siemens ECAT8 support etc
+    pinhole SPECT modelling
     help with integration and general maintenance
     Brown, Richard
     Efthimiou, Nikos
+    Biguri, Ander
+    Emond, Elise
+    Falc&oacute;n, Carl&eacute;s
     Twyman, Robert
     Tsai, Yu-jung
-    Emond, Elise
-    Rashidnasab, Alaleh
     Thomas, Benjamin
+    Porter, Sam D.
+    Rashidnasab, Alaleh
     Thielemans, Kris
 
 </pre>
@@ -233,7 +241,7 @@ web site, as designed by Patrick Valente (Brunel).
 <hr>
 <!-- Created: Fri Jan 04  2002 -->
 <!-- hhmts start -->
-Last modified: Tue Mar 22  2022
+Last modified: Tue Jan 12  2023
 <!-- hhmts end -->
   </body>
 </html>
