--- a/documentation/release_5.1.htm
+++ b/documentation/release_5.1.htm
@@ -130,12 +130,14 @@
 
 <h3>Build system and dependencies</h3>
 <ul>
-    <li>STIR now requires parallelproj at least 1.0, although 1.2.10 or more recent is recommended.</li>
+    <li>STIR now requires parallelproj at least 1.0, although 1.2.13 or more recent is recommended.</li>
     <li>
       ROOT versions until v6.24 supported C++11, subsequent versions require at least C++14.
       If ROOT v6.24 or later is detected, STIR will now use a minimum of C++14,
       see <a href="https://github.com/UCL/STIR/pull/1068/">PR #1068</a>.
     </li>
+    <li>Various <code>find_package</code> statements and messages have been improved, see
+      e.g. <a href="https://github.com/UCL/STIR/pull/1140/">PR #1140</a>.
 </ul>
 
 
