--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -43,12 +43,15 @@
 <h3>Changed functionality</h3>
 <ul>
   <li>energy resolution functions and keywords have now more documentation. <code>Scanner::check_consistency</code> also checks if the energy resolution is less than 20 (as it is FWHM/reference_energy).
-  <a href="https://github.com/UCL/STIR/pull/1149/">PR #1149</a>.
+  <br /><a href="https://github.com/UCL/STIR/pull/1149/">PR #1149</a>.
   </li>
 </ul>
 
 <h3>Build system and dependencies</h3>
 <ul>
+  <li>We now use CMake's <a href=https://gitlab.kitware.com/cmake/community/-/wikis/doc/tutorials/Object-Library>OBJECT library feature</a> for the registries. This avoids re-compilation of the registries for every executable and therefore speeds-up building time. Use of STIR in an external project is not affected as long as the recommended practice was followed. This is now documented in the User's Guide.
+    <br /><a href="https://github.com/UCL/STIR/pull/1141/">PR #1141</a>.
+  </li>
 </ul>
 
 
