Added check for number of tangential positions to be smaller or equal to max num non arc corrected bins. Added line to release notes.

--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -63,6 +63,9 @@
 
 <h3>Minor (?) bug fixes</h3>
 <ul>
+  <li>Small change in scatter simulation to how non-arccorrected bins are computed. Added a check in the construction of non-arccorrected projdata that the number of tangential bins is not larger than the maximum non-arccorrected bins.
+    <br /><a href="https://github.com/UCL/STIR/pull/1152/">PR #1152</a>.
+  </li>
 </ul>
 
 <h3>Documentation changes</h3>
