Updated the release notes [ci skip]

--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -26,6 +26,9 @@
 
 <h3>Bug fixes</h3>
 <ul>
+  <li>Scatter estimation was setting initial activity image to 1 at set_up and during each iteration. This led to cases where the scatter estimation would not converge.
+    <br /><a href="https://github.com/UCL/STIR/pull/1160/">PR #1160</a>.
+  </li>
 </ul>
 
 <h3>New functionality</h3>
