Changing error handling to throw runtime_error instead of string. (#1131)
* Changing error handling to throw std::runtime_error instead of string.
---------

Co-authored-by: Markus Jehl <markus.jehl@positrigo.com>

--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -53,6 +53,9 @@
   <li>energy resolution functions and keywords have now more documentation. <code>Scanner::check_consistency</code> also checks if the energy resolution is less than 20 (as it is FWHM/reference_energy).
   <br /><a href="https://github.com/UCL/STIR/pull/1149/">PR #1149</a>.
   </li>
+  <li>Errors now throw <code>std::runtime_error</code> instead of <code>std::string</code>.
+  <br /><a href="https://github.com/UCL/STIR/pull/1131/">PR #1131</a>.
+  </li>
 </ul>
 
 <h3>Build system and dependencies</h3>
