Updated release notes.

--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -65,6 +65,9 @@
   <li>Errors now throw <code>std::runtime_error</code> instead of <code>std::string</code>.
   <br /><a href="https://github.com/UCL/STIR/pull/1131/">PR #1131</a>.
   </li>
+  <li>The parameter <code>use_view_offset</code> was removed from the <code>interpolate_projdata</code> functions.
+  <br /><a href="https://github.com/UCL/STIR/pull/1172/">PR #1172</a>.
+  </li>
 </ul>
 
 <h3>Build system and dependencies</h3>
